--- a/apps/admins/view/Mail/mail.html
+++ b/apps/admins/view/Mail/mail.html
@@ -98,7 +98,7 @@
           <ul>
               <li><a href="adv" target="right"><span class="icon-caret-right"></span>系统首页</a></li>
               <li><a href="notice_list" target="right"><span class="icon-caret-right"></span>系统管理</a></li>
-              <li><a href="notice_add" target="right"><span class="icon-caret-right"></span>清楚缓存</a></li>
+              <li><a href="go_clear" target="right"><span class="icon-caret-right"></span>清楚缓存</a></li>
           </ul>
       </div>
 
